--- a/style.css
+++ b/style.css
@@ -26,31 +26,27 @@ button {
 #dropdown-content1 {
     display: none;
     position: absolute;
-    background-color: rgb(113, 113, 113);
     width: 270px;
 }
 #dropdown-content2 {
     display: none;
     position: absolute;
-    background-color: rgb(113, 113, 113);
     width: 270px;
 }
 #dropdown-content3 {
     display: none;
     position: absolute;
-    background-color: rgb(238, 238, 238);
-    width: 470px;
+    width: 460px;
+    padding: 10px;
 }
 #dropdown-content4 {
     display: none;
     position: absolute;
-    background-color: rgb(238, 238, 238);
     width: 470px;
 }
 #dropdown-content5 {
     display: none;
     position: absolute;
-    background-color: rgb(238, 238, 238);
     width: 470px;
 }
 .grid-container {
